--- a/.github/actions/configure-aws-credentials/action.yml
+++ b/.github/actions/configure-aws-credentials/action.yml
@@ -24,22 +24,15 @@ runs:
 
         echo "::group::AWS account authentication details"
 
-        # Print the commands as you run them
-        set -o xtrace
-
-        # Set up environment for detailed Terraform logs
-        export TF_LOG="${{ env.TF_LOG }}"
-
-        terraform --version
-        terraform -chdir=infra/project-config init
-        terraform -chdir=infra/project-config apply -auto-approve
+        terraform -chdir=infra/project-config init > /dev/null
+        terraform -chdir=infra/project-config apply > /dev/null
         AWS_REGION=$(terraform -chdir=infra/project-config output -raw default_region)
         echo "AWS_REGION=$AWS_REGION"
         GITHUB_ACTIONS_ROLE_NAME=$(terraform -chdir=infra/project-config output -raw github_actions_role_name)
         echo "GITHUB_ACTIONS_ROLE_NAME=$GITHUB_ACTIONS_ROLE_NAME"
 
-        terraform -chdir=infra/${{ inputs.app_name }}/app-config init
-        terraform -chdir=infra/${{ inputs.app_name }}/app-config apply -auto-approve
+        terraform -chdir=infra/${{ inputs.app_name }}/app-config init > /dev/null
+        terraform -chdir=infra/${{ inputs.app_name }}/app-config apply > /dev/null
         ACCOUNT_NAME=$(terraform -chdir=infra/${{ inputs.app_name }}/app-config output -json account_names_by_environment | jq -r .${{ inputs.environment }})
         echo "ACCOUNT_NAME=$ACCOUNT_NAME"
 
