--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -19,6 +19,7 @@ RUN apt-get update \
         libpq-dev \
         postgresql \
         wget \
+        libtasn1-6 \
     # Install security updates
     # https://pythonspeed.com/articles/security-updates-in-docker/
     && apt-get upgrade --yes \
@@ -27,6 +28,7 @@ RUN apt-get update \
         libpq-dev \
         postgresql \
         wget \
+        libtasn1-6 \
     # Reduce the image size by clear apt cached lists
     # Complies with https://github.com/codacy/codacy-hadolint/blob/master/codacy-hadolint/docs/description/DL3009.md
     && rm -fr /var/lib/apt/lists/* \
