Attempt to fix apt-get install failure

--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -29,6 +29,7 @@ RUN apt-get update \
     postgresql \
     wget \
     libtasn1-6 \
+    libgnutls30 \
   # Reduce the image size by clear apt cached lists
   # Complies with https://github.com/codacy/codacy-hadolint/blob/master/codacy-hadolint/docs/description/DL3009.md
   && rm -fr /var/lib/apt/lists/* \
