Seems to fix the libtasn1 issue

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -59,11 +59,9 @@ WORKDIR /frontend
 
 # Update system and install security updates
 RUN apt-get update \
-  && apt-get remove --yes \
-  libtasn1-6 \
   && apt-get upgrade -y --no-install-recommends \
   && apt-get install -y --only-upgrade libc-bin libc6 \
-  && apt-get install --no-install-recommends --yes libtasn1-6 libgnutls30 \
+  && apt-get install --no-install-recommends --yes libtasn1-6 \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
