--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,7 @@
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
