Revert "[Issue #3156] fetch options for agency filter from api (#3637)"
This reverts commit a3a2a15abf2ecad5d634bd91cdb218bed2f8e220.

--- a/.github/workflows/ci-frontend-a11y.yml
+++ b/.github/workflows/ci-frontend-a11y.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Start API Server for search results
         run: |
           cd ../api
-          make init db-seed-local populate-search-opportunities start &
+          make init db-seed-local start &
           cd ../frontend
           # ensure the API wait script is executable
           chmod +x ../api/bin/wait-for-api.sh
