[Issue #3764] add search query params to new relic (#4039)
* sends search page query params to new relic
* adds a typing package for the new relic client side object
* some moving around of new relic and query param related typing
* enables new relic in staging
* updates docs

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "lint": "next lint",
     "lint-fix": "npm run lint -- --fix",
     "postinstall": "node ./scripts/postinstall.js",
-    "start:nr": "NODE_OPTIONS='-r @newrelic/next' next start -p ${PORT:-3000}",
+    "start:nr": "NEW_RELIC_ENABLED=true NODE_OPTIONS='-r @newrelic/next' next start -p ${PORT:-3000}",
     "start": "next start -p ${PORT:-3000}",
     "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build",
@@ -65,6 +65,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.13",
     "@types/newrelic": "^9.14.6",
+    "@types/new-relic-browser": "^1.230.5",
     "@types/node": "^22.10.5",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^19",
