--- a/api/local.env
+++ b/api/local.env
@@ -138,6 +138,10 @@ PUBLIC_FILES_OPPORTUNITY_DATA_EXTRACTS_PATH=/tmp
 # File path for the create-analytics-db-csvs task
 API_ANALYTICS_DB_EXTRACTS_PATH=/tmp
 
+# Batch processing configuration for load_opportunities_to_index task
+BATCH_SIZE=1000
+MAX_PROCESS_TIME=3000
+
 ############################
 # Deploy Metadata
 ############################
