add preloader library to resolve issue with testing dynamic import

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,8 +65,8 @@
     "@types/jest-axe": "^3.5.5",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.13",
-    "@types/newrelic": "^9.14.6",
     "@types/new-relic-browser": "^1.230.5",
+    "@types/newrelic": "^9.14.6",
     "@types/node": "^22.10.5",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^19",
@@ -85,6 +85,7 @@
     "jest-axe": "^7.0.0",
     "jest-cli": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-next-dynamic": "^1.0.2",
     "pa11y-ci": "^3.1.0",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.1.0",
