--- a/api/local.env
+++ b/api/local.env
@@ -139,8 +139,8 @@ PUBLIC_FILES_OPPORTUNITY_DATA_EXTRACTS_PATH=/tmp
 API_ANALYTICS_DB_EXTRACTS_PATH=/tmp
 
 # Batch processing configuration for load_opportunities_to_index task
-BATCH_SIZE=1000
-MAX_PROCESS_TIME=3000
+INCREMENTAL_LOAD_BATCH_SIZE=1000
+INCREMENTAL_LOAD_MAX_PROCESS_TIME=3000
 
 ############################
 # Deploy Metadata
