--- a/api/local.env
+++ b/api/local.env
@@ -52,6 +52,8 @@ LOGIN_GOV_ENDPOINT=http://host.docker.internal:5001/issuer1
 
 LOGIN_FINAL_DESTINATION=http://localhost:8080/v1/users/login/result
 
+FRONTEND_BASE_URL=http://localhost:8080
+
 # These should be set in your override.env file
 # which can be created by running `make setup-env-override-file`
 API_JWT_PRIVATE_KEY=
