--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -260,15 +260,15 @@ application_logging.forwarding.enabled = false
 application_logging.local_decorating.enabled = false
 
 [newrelic:staging]
-app_name = SIMPLER-GRANTS-API-STAGING
+app_name = api-staging
 monitor_mode = true
 
 [newrelic:prod]
-app_name = SIMPLER-GRANTS-API-PROD
+app_name = api-prod
 monitor_mode = true
 
 [newrelic:dev]
-app_name = SIMPLER-GRANTS-API-DEV
+app_name = api-dev
 monitor_mode = true
 
 # ---------------------------------------------------------------------------
