--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -250,7 +250,7 @@ application_logging.forwarding.context_data.enabled = true
 # Less scary note: do not wrap your license key in quotes, it should look like this:
 #   license_key=1234abcd
 #
-app_name = SIMPLER-GRANTS-API-LOCAL
+app_name = api-local
 developer_mode = true
 monitor_mode = false
 license_key=replace_me
