--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -250,7 +250,7 @@ application_logging.forwarding.context_data.enabled = true
 # Less scary note: do not wrap your license key in quotes, it should look like this:
 #   license_key=1234abcd
 #
-app_name = SIMPLER-GRANTS-API-LOCAL
+app_name = api-local
 developer_mode = true
 monitor_mode = false
 license_key=replace_me
@@ -260,15 +260,15 @@ application_logging.forwarding.enabled = false
 application_logging.local_decorating.enabled = false
 
 [newrelic:staging]
-app_name = SIMPLER-GRANTS-API-STAGING
+app_name = api-staging
 monitor_mode = true
 
 [newrelic:prod]
-app_name = SIMPLER-GRANTS-API-PROD
+app_name = api-prod
 monitor_mode = true
 
 [newrelic:dev]
-app_name = SIMPLER-GRANTS-API-DEV
+app_name = api-dev
 monitor_mode = true
 
 # ---------------------------------------------------------------------------
