--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -30,6 +30,7 @@ pyjwt = { extras = ["crypto"], version = "^2.9.0" }
 newrelic = "10.7.0"
 jinja2 = ">=3.1.5"
 tenacity = "^8.0"
+jsonschema = { extras = ["format-nongpl"], version = "^4.23.0" }
 
 
 [tool.poetry.group.dev.dependencies]
