[Issue #4181] Add boilerplate setup for new endpoints

--- a/api/local.env
+++ b/api/local.env
@@ -61,6 +61,7 @@ API_JWT_PUBLIC_KEY=
 LOGIN_GOV_CLIENT_ASSERTION_PRIVATE_KEY=
 
 ENABLE_AUTH_ENDPOINT=TRUE
+ENABLE_APPLY_ENDPOINTS=TRUE
 
 ############################
 # DB Environment Variables
