--- a/api/local.env
+++ b/api/local.env
@@ -155,3 +155,5 @@ DEPLOY_TIMESTAMP=2024-12-02T21:25:18Z
 DEPLOY_WHOAMI=local-developer
 
 CDN_URL=http://localhost:4566/local-mock-public-bucket
+
+ENABLE_APPLY_ENDPOINT=true
