--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "isomorphic-dompurify": "^2.15.0",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "json-pointer": "^0.6.2",
     "lodash": "^4.17.21",
     "newrelic": "^12.7.0",
     "next": "^15.1.4",
@@ -70,6 +71,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest-axe": "^3.5.5",
     "@types/js-cookie": "^3.0.6",
+    "@types/json-pointer": "^1.0.34",
     "@types/lodash": "^4.17.13",
     "@types/new-relic-browser": "^1.230.5",
     "@types/newrelic": "^9.14.6",
