--- a/.github/workflows/check-infra-deploy-status.yml
+++ b/.github/workflows/check-infra-deploy-status.yml
@@ -44,9 +44,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Terraform
-        uses: ./.github/actions/setup-terraform
+      - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.8.3
+          terraform_wrapper: false
 
       - name: Configure AWS credentials
         uses: ./.github/actions/configure-aws-credentials
@@ -69,12 +70,3 @@ jobs:
           echo "::endgroup::"
         env:
           TF_IN_AUTOMATION: "true"
-  notify:
-    name: Notify
-    needs: check
-    if: failure()
-    uses: ./.github/workflows/send-system-notification.yml
-    with:
-      channel: "workflow-failures"
-      message: "🔍 [Infrastructure state differs from configuration](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})"
-    secrets: inherit
