--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -106,6 +106,7 @@ services:
       - opensearch-node
       - localstack
       - mock-oauth2-server
+      - mock-applicants-soap-api
     networks:
       - grants_backend
       - default
@@ -124,6 +125,15 @@ services:
     volumes:
       - ./mock-oauth/config.json:/app/config.json
       - ./mock-oauth/mock-server-key.json:/app/resources/mock-oauth2-server-keys.json
+
+  mock-applicants-soap-api:
+    image: outofcoffee/imposter
+    ports:
+      - "8082:8080"
+    volumes:
+      - ./mock-soap-services/applicants:/opt/imposter/config:ro
+    networks:
+      - default
 
 volumes:
   grantsdbdata:
