Added myself to codeowners and maintainers

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,13 +2,13 @@
 
 * @mdragon # project lead
 
-/documentation/  @acouch @andycochran @btabaska @chouinar @coilysiren @doug-s-nava @freddieyebra @mdragon @widal001 @capriiis # everyone
+/documentation/  @acouch @andycochran @btabaska @chouinar @coilysiren @doug-s-nava @freddieyebra @mdragon @widal001 @capriiis @joshtonava # everyone
 
 /analytics/               @acouch @coilysiren @freddieyebra @widal001
 /documentation/analytics/ @acouch @coilysiren @freddieyebra @widal001
 
-/api/               @chouinar @freddieyebra @mdragon
-/documentation/api/ @chouinar @freddieyebra @mdragon
+/api/               @chouinar @freddieyebra @mdragon @joshtonava
+/documentation/api/ @chouinar @freddieyebra @mdragon @joshtonava
 
 /frontend/               @acouch @andycochran @btabaska @doug-s-nava @freddieyebra
 /documentation/frontend/ @acouch @andycochran @btabaska @doug-s-nava @freddieyebra
