Add initial unit tests.

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -128,6 +128,7 @@ services:
 
   mock-applicants-soap-api:
     image: outofcoffee/imposter
+    container_name: mock-applicants-soap-api
     ports:
       - "8082:8080"
     volumes:
