--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -223,9 +223,11 @@ distributed_tracing.enabled = true
 # no PII data is captured in messages of new relic.
 strip_exception_messages.enabled = true
 
-# Tell New Relic to include the full JSON / extra info from our logs
-# https://docs.newrelic.com/docs/apm/agents/python-agent/configuration/python-agent-configuration/#application_logging.forwarding.context_data.enabled
-application_logging.forwarding.context_data.enabled = true
+# We don't enable application logging, but do decorate the logs with New Relic metadata
+# Instead of forwarding the logs using New Relic, we use a fluentbit sidecar to do that.
+application_logging.enabled = false
+application_logging.forwarding.enabled = false
+application_logging.local_decorating.enabled = false
 
 # ---------------------------------------------------------------------------
 
@@ -254,10 +256,6 @@ app_name = api-local
 developer_mode = true
 monitor_mode = false
 license_key=replace_me
-
-application_logging.enabled = false
-application_logging.forwarding.enabled = false
-application_logging.local_decorating.enabled = false
 
 [newrelic:staging]
 app_name = api-staging
