--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -31,7 +31,8 @@ newrelic = "10.7.0"
 jinja2 = ">=3.1.5"
 tenacity = "^8.0"
 jsonschema = { extras = ["format-nongpl"], version = "^4.23.0" }
-
+pandas = "^2.0.3"
+pandas-stubs = "^2.0.2.230605"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
