--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -70,6 +70,7 @@ db-seed-local = "tests.lib.seed_local_db:seed_local_db"
 create-erds = "bin.create_erds:main"
 setup-postgres-db = "src.db.migrations.setup_local_postgres_db:setup_local_postgres_db"
 setup-localstack = "bin.setup_localstack:main"
+dat-to-jsonschema = "src.form_schema.dat_to_jsonschema_cli:main"
 
 [tool.black]
 line-length = 100
