--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,15 +29,16 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "^1.8.2",
     "@newrelic/next": "^0.10.0",
     "@next/third-parties": "^15.1.4",
     "@opentelemetry/api": "^1.8.0",
-    "@rjsf/core": "^5.24.7",
-    "@rjsf/utils": "^5.24.7",
-    "@rjsf/validator-ajv8": "^5.24.7",
+    "@rjsf/core": "^5.24.8",
+    "@rjsf/utils": "^5.24.8",
+    "@rjsf/validator-ajv8": "^5.24.8",
     "@trussworks/react-uswds": "github:trussworks/react-uswds#58f3089739ac5ee415c11cfbe179daad7a62597",
     "@uswds/uswds": "^3.7.1",
+    "ajv": "^8.17.1",
+    "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "focus-trap-react": "^10.2.3",
