--- a/api/local.env
+++ b/api/local.env
@@ -160,3 +160,4 @@ CDN_URL=http://localhost:4566/local-mock-public-bucket
 # SOAP Proxy Configuration
 ############################
 GRANTS_GOV_URI=http://host.docker.internal:8082
+ENABLE_SOAP_API=1
