Upodate mock soap service local address.

--- a/api/local.env
+++ b/api/local.env
@@ -159,5 +159,5 @@ CDN_URL=http://localhost:4566/local-mock-public-bucket
 ############################
 # SOAP Proxy Configuration
 ############################
-GRANTS_GOV_URI=http://host.docker.internal:8082
+GRANTS_GOV_URI=http://mock-applicants-soap-api:8080
 ENABLE_SOAP_API=1
