--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -113,6 +113,7 @@ services:
 
   mock-oauth2-server:
     image: ghcr.io/navikt/mock-oauth2-server:2.1.10
+    container_name: mock-oauth2-server
     ports:
       - "5001:5001"
     environment:
