--- a/api/local.env
+++ b/api/local.env
@@ -45,10 +45,10 @@ API_AUTH_TOKEN=LOCAL_AUTH_12345678,LOCAL_AUTH_87654321,LOCAL_1234
 
 LOGIN_GOV_CLIENT_ID=local_mock_client_id
 
-LOGIN_GOV_JWK_ENDPOINT=http://host.docker.internal:5001/issuer1/jwks
+LOGIN_GOV_JWK_ENDPOINT=http://mock-oauth2-server:5001/issuer1/jwks
 LOGIN_GOV_AUTH_ENDPOINT=http://localhost:5001/issuer1/authorize
-LOGIN_GOV_TOKEN_ENDPOINT=http://host.docker.internal:5001/issuer1/token
-LOGIN_GOV_ENDPOINT=http://host.docker.internal:5001/issuer1
+LOGIN_GOV_TOKEN_ENDPOINT=http://mock-oauth2-server:5001/issuer1/token
+LOGIN_GOV_ENDPOINT=http://mock-oauth2-server:5001/issuer1
 
 LOGIN_FINAL_DESTINATION=http://localhost:8080/v1/users/login/result
 
