[Issue 4251] Create endpoint to proxy incoming SOAP requests (#4346)
## Summary
Fixes #4251

### Time to review: __20 mins__

## Changes proposed
This PR adds a non REST API endpoint that will serve as a SOAP API
handler to proxy incoming SOAP requests to the existing grants.gov SOAP
S2S API.

## Context for reviewers
This endpoint will only be available in lower environments until #4345
has been resolved.

To verify this pr:
1. Run the backend service locally.
2. Send the following mock `GetOpportunityListRequest` request to
`http://localhost:8080/grantsws-applicant/services/v2/ApplicantWebServicesSoapPort`:
```xml
<soapenv:Envelope xmlns:soapenv="http://schemas.xmlsoap.org/soap/envelope/" xmlns:app="http://apply.grants.gov/services/ApplicantWebServices-V2.0" xmlns:gran="http://apply.grants.gov/system/GrantsCommonElements-V1.0" xmlns:app1="http://apply.grants.gov/system/ApplicantCommonElements-V1.0">
   <soapenv:Header/>
   <soapenv:Body>
      <app:GetOpportunityListRequest>
         <app1:OpportunityFilter>
            <gran:FundingOpportunityNumber>O-BJA-2025-202930-STG</gran:FundingOpportunityNumber>
         </app1:OpportunityFilter>
      </app:GetOpportunityListRequest>
   </soapenv:Body>
</soapenv:Envelope>
```
3. Verify there is a mock response with random data similar to:
```xml
<?xml version="1.0" encoding="UTF-8"?>
<env:Envelope xmlns:env="http://schemas.xmlsoap.org/soap/envelope/">
    <env:Header />
    <env:Body>
        <app:GetOpportunityListResponse xmlns:app="http://apply.grants.gov/services/ApplicantWebServices-V2.0"
            xmlns:app1="http://apply.grants.gov/system/ApplicantCommonElements-V1.0"
            xmlns:gran="http://apply.grants.gov/system/GrantsCommonElements-V1.0">
            <!--Zero or more repetitions:-->
            <app1:OpportunityDetails>
                <!--Optional:-->
                <gran:FundingOpportunityNumber>string</gran:FundingOpportunityNumber>
                <!--Optional:-->
                <gran:FundingOppo

--- a/api/local.env
+++ b/api/local.env
@@ -155,3 +155,9 @@ DEPLOY_TIMESTAMP=2024-12-02T21:25:18Z
 DEPLOY_WHOAMI=local-developer
 
 CDN_URL=http://localhost:4566/local-mock-public-bucket
+
+############################
+# SOAP Proxy Configuration
+############################
+GRANTS_GOV_URI=http://mock-applicants-soap-api:8080
+ENABLE_SOAP_API=1
