--- a/api/Makefile
+++ b/api/Makefile
@@ -284,8 +284,8 @@ setup-foreign-tables:
 seed-local-legacy-tables:
 	$(PY_RUN_CMD) python3 -m tests.lib.seed_local_legacy_tables
 
-populate-search-opportunities: ## Load opportunities from the DB into the search index, run "make db-seed-local" first to populate your database
-	$(FLASK_CMD) load-search-data load-opportunity-data $(args)
+populate-search-opportunities: ## Load opportunities and agencies from the DB into the search index, run "make db-seed-local" first to populate your database
+	$(FLASK_CMD) load-search-data load-opportunity-data load-agency-data $(args)
 
 ##################################################
 # Miscellaneous Utilities
