--- a/.github/workflows/cd-frontend.yml
+++ b/.github/workflows/cd-frontend.yml
@@ -5,7 +5,9 @@ on:
   push:
     branches:
       - "main"
+      - "kai/frontend-deploys"
     paths:
+      - "**"
       - "frontend/**"
       - "infra/frontend/**"
   release:
