[Issue #4264] Create util / tests for dat to JSONSchema conversion (#4350)
## Summary
Fixes #4264

### Time to review: 30 mins

## Changes proposed
- Add CSV parser to JSONSchema
- Add util to convert XLS to CSV
- Parse these fields based on metadata from DAT entries.
- Add pandas to project for XLS parsing

## Context for reviewers
We parse multiple DAT files to test:
https://grants.gov/forms/form-items-description/fid/668
https://grants.gov/forms/form-items-description/fid/723

We either skip or set unknown data types to `string` (skipped types are
defined in an array in code)

## Additional information
poetry.lock - how should this be updated?
This will eventually be rolled into a CLI tool, and will change
frequently over time. Not by any means a final implementation.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -31,7 +31,9 @@ newrelic = "10.7.0"
 jinja2 = ">=3.1.5"
 tenacity = "^8.0"
 jsonschema = { extras = ["format-nongpl"], version = "^4.23.0" }
-
+pandas = "^2.0.3"
+pandas-stubs = "^2.0.2.230605"
+xlrd = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
@@ -68,6 +70,7 @@ db-seed-local = "tests.lib.seed_local_db:seed_local_db"
 create-erds = "bin.create_erds:main"
 setup-postgres-db = "src.db.migrations.setup_local_postgres_db:setup_local_postgres_db"
 setup-localstack = "bin.setup_localstack:main"
+dat-to-jsonschema = "src.form_schema.dat_to_jsonschema_cli:main"
 
 [tool.black]
 line-length = 100
