--- a/api/local.env
+++ b/api/local.env
@@ -161,3 +161,4 @@ CDN_URL=http://localhost:4566/local-mock-public-bucket
 ############################
 GRANTS_GOV_URI=http://mock-applicants-soap-api:8080
 ENABLE_SOAP_API=1
+INJECT_UUID_SOAP_RESPONSE=1 # inject uuid and other response info to simulate live SOAP response.
