add path for next to add request logging with pino-http

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /frontend
 COPY package.json package-lock.json ./
 COPY public ./public
 COPY scripts ./scripts
+COPY patches ./patches
 RUN npm ci --no-audit \
   # Remove dev packages not removed by `npm prune` maybe from older storybook?
   && rm -rf /frontend/node_modules/@esbuild
