--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "format-check": "prettier --check '**/*.{js,json,md,ts,tsx,scss,yaml,yml}'",
     "lint": "next lint",
     "lint-fix": "npm run lint -- --fix",
-    "postinstall": "node ./scripts/postinstall.js",
+    "postinstall": "npx patch-package && node ./scripts/postinstall.js",
     "start:nr": "NEW_RELIC_ENABLED=true NODE_OPTIONS='-r @newrelic/next' next start -p ${PORT:-3000}",
     "start": "next start -p ${PORT:-3000}",
     "storybook": "storybook dev -p 6006",
@@ -29,12 +29,12 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "^1.8.2",
     "@newrelic/next": "^0.10.0",
     "@next/third-parties": "^15.1.4",
     "@opentelemetry/api": "^1.8.0",
     "@trussworks/react-uswds": "github:trussworks/react-uswds#58f3089739ac5ee415c11cfbe179daad7a62597",
     "@uswds/uswds": "^3.7.1",
+    "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "focus-trap-react": "^10.2.3",
@@ -45,6 +45,8 @@
     "newrelic": "^12.7.0",
     "next": "^15.2.4",
     "next-intl": "^3.2.1",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
@@ -86,6 +88,7 @@
     "jest-cli": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "pa11y-ci": "^3.1.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.1.0",
     "postcss-preset-env": "^8.0.1",
