--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -256,7 +256,7 @@ app_name = api-local
 developer_mode = true
 monitor_mode = false
 license_key=replace_me
-#transaction_tracer.enabled = false
+transaction_tracer.enabled = false
 
 [newrelic:staging]
 app_name = api-staging
