[Unticketed] Attempt to fix deploy problem (#4435)
## Summary

### Time to review: __1 mins__

## Changes proposed
Disable transaction tracing locally as it might conflict with some test
setup

--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -256,6 +256,7 @@ app_name = api-local
 developer_mode = true
 monitor_mode = false
 license_key=replace_me
+transaction_tracer.enabled = false
 
 [newrelic:staging]
 app_name = api-staging
