--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,11 @@
     "@newrelic/next": "^0.10.0",
     "@next/third-parties": "^15.1.4",
     "@opentelemetry/api": "^1.8.0",
-    "@rjsf/core": "^5.24.8",
     "@rjsf/utils": "^5.24.8",
-    "@rjsf/validator-ajv8": "^5.24.8",
     "@trussworks/react-uswds": "github:trussworks/react-uswds#58f3089739ac5ee415c11cfbe179daad7a62597",
     "@uswds/uswds": "^3.7.1",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -52,7 +51,6 @@
     "next-intl": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-jsonschema-form": "^1.8.1",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
     "zod": "^3.23.8"
