[Issue #4153] Load agency into search index (#4406)
## Summary
Fixes #{[4153](https://github.com/HHS/simpler-grants-gov/issues/4153)}

### Time to review: __10 mins__

## Changes proposed
Load all agencies in the db to dedicated search index
<img width="657" alt="Screenshot 2025-04-01 at 4 20 32 PM"
src="https://github.com/user-attachments/assets/453a497f-a657-4f09-9edb-67ae311e5de5"
/>

--- a/api/Makefile
+++ b/api/Makefile
@@ -300,6 +300,8 @@ seed-local-legacy-tables:
 populate-search-opportunities: ## Load opportunities from the DB into the search index, run "make db-seed-local" first to populate your database
 	$(FLASK_CMD) load-search-data load-opportunity-data $(args)
 
+populate-search-agencies: ## Load agencies from the DB into the search index, run "make db-seed-local" first to populate your database
+	$(FLASK_CMD) load-search-data load-agency-data $(args)
 ##################################################
 # Miscellaneous Utilities
 ##################################################
