[Unticketed] Disable developer mode for New Relic

--- a/api/newrelic.ini
+++ b/api/newrelic.ini
@@ -253,7 +253,7 @@ application_logging.local_decorating.enabled = false
 #   license_key=1234abcd
 #
 app_name = api-local
-developer_mode = true
+developer_mode = false
 monitor_mode = false
 license_key=replace_me
 transaction_tracer.enabled = false
