--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@rjsf/utils": "^5.24.8",
     "@trussworks/react-uswds": "github:trussworks/react-uswds#58f3089739ac5ee415c11cfbe179daad7a62597",
     "@uswds/uswds": "^3.7.1",
+    "@zip.js/zip.js": "^2.7.60",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "axios": "^1.8.2",
