--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -61,7 +61,7 @@ WORKDIR /frontend
 RUN apt-get update \
   && apt-get upgrade -y --no-install-recommends \
   && apt-get install -y --only-upgrade libc-bin libc6 \
-  && apt-get install --no-install-recommends --yes libtasn1-6 libgnutls30 \
+  && apt-get install --no-install-recommends --yes libtasn1-6 libgnutls30 liblzma5 \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
