Address anchore flagged libs

--- a/analytics/Dockerfile
+++ b/analytics/Dockerfile
@@ -29,6 +29,8 @@ RUN apt-get update \
     wget \
     libtasn1-6 \
     libgnutls30 \
+    liblzma5 \
+    xz-utils \
   # Reduce the image size by clear apt cached lists
   # Complies with https://github.com/codacy/codacy-hadolint/blob/master/codacy-hadolint/docs/description/DL3009.md
   && rm -fr /var/lib/apt/lists/* \
