Use tika in load opportunities.

--- a/api/local.env
+++ b/api/local.env
@@ -166,4 +166,4 @@ INJECT_UUID_SOAP_RESPONSE=1 # inject uuid and other response info to simulate li
 ############################
 # TIKA Config
 ############################
-TIKA_URL=http://tika:9998/tika
+LOAD_OPP_SEARCH_TIKA_URL=http://tika:9998/tika
