--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -34,6 +34,9 @@ jsonschema = { extras = ["format-nongpl"], version = "^4.23.0" }
 pandas = "^2.0.3"
 pandas-stubs = "^2.0.2.230605"
 xlrd = "^2.0.1"
+pypdf = "^5.4.0"
+python-docx = "^1.1.2"
+beautifulsoup4 = "^4.13.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
