[Issue #4555] Add New Relic support to Analytics code

--- a/analytics/local.env
+++ b/analytics/local.env
@@ -1,3 +1,5 @@
+ENVIRONMENT=local
+
 ############################
 # DB Environment Variables #
 ############################
@@ -53,6 +55,9 @@ LOG_FORMAT=human-readable
 
 # Change the message length for the human readable formatter
 # LOG_HUMAN_READABLE_FORMATTER__MESSAGE_WIDTH=50
+
+# Make typer print pretty exceptions locally
+ENABLE_PRETTY_EXCEPTIONS=1
 
 ############################
 # S3
