--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -37,6 +37,7 @@ xlrd = "^2.0.1"
 pypdf = "^5.4.0"
 python-docx = "^1.1.2"
 beautifulsoup4 = "^4.13.3"
+striprtf = "^0.0.29"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
