add mb api env vars

--- a/analytics/local.env
+++ b/analytics/local.env
@@ -30,6 +30,11 @@ MB_DB_USER=app
 MB_DB_PASS=secret123
 MB_DB_HOST=grants-analytics-db
 
+# Metabase API configuration
+MB_API_URL=http://metabase-dev-710651776.us-east-1.elb.amazonaws.com/api
+MB_API_KEY=DO_NOT_SET_HERE
+MB_BACKUP_DIR=src/analytics/integrations/metabase/sql
+
 ###########################
 # Secret Configuration   #
 ###########################
