--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "json-pointer": "^0.6.2",
+    "json-schema-ref-parser": "^9.0.9",
     "lodash": "^4.17.21",
     "newrelic": "^12.7.0",
     "next": "^15.2.4",
