--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -39,6 +39,7 @@ python-docx = "^1.1.2"
 beautifulsoup4 = "^4.13.3"
 striprtf = "^0.0.29"
 python-pptx = "^1.0.2"
+openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
