add ids to list items and some incidentals

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "lint": "next lint",
     "lint-fix": "npm run lint -- --fix",
     "postinstall": "node ./scripts/postinstall.js",
-    "start:nr": "NEW_RELIC_ENABLED=true NODE_OPTIONS='-r @newrelic/next' next start -p ${PORT:-3000}",
+    "start:nr": "NEW_RELIC_ENABLED=true NODE_OPTIONS='-r newrelic' next start -p ${PORT:-3000}",
     "start": "next start -p ${PORT:-3000}",
     "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build",
