[Issue 4580] Metabase API client for query backups (#4581)
## Summary
Fixes #4580

### Time to review: __10 mins__

## Changes proposed
> What was added, updated, or removed in this PR.

Implement a Metabase API client for the purpose of semi-automated
backups of dashboard queries.

## Context for reviewers
> Testing instructions, background context, more in-depth details of the
implementation, and anything else you'd like to call out or ask
reviewers. Explain how the changes were verified.

Support the following workflow:

- Developer continues to use Metabase to write/edit/publish queries and
dashboards
- Developer manually triggers a new backup script (e.g. make
metabase-backup) via the analytics CLI on their local machine
- The backup script interacts with the Metabase HTTP API on the prod (or
dev, its configurable) server:
  - Get all collections
- For each collection, get all SQL queries (aka “questions” in Metabase)
- For each question, save raw SQL to an appropriately named local text
file
- Developer commits the generated files through the standard PR process

For more details see:

[ADR: Automated Backup Solutions for
Metabase](https://docs.google.com/document/d/1gddLSUZupg-wahsDaDzK8Mwvb6FZV0o5l6wyiKyDdFA/edit?tab=t.0)
[Discovery: Automated Backup Options for
Metabase](https://docs.google.com/document/d/1DVLHdl4nAdc945DG2-s-Z93sGjLpPnDGG2drQAwReFo/edit?tab=t.0)

## Additional information
> Screenshots, GIF demos, code examples or output to help show the
changes working as expected.

--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -22,6 +22,7 @@ plotly = "^5.15.0"
 pydantic = "^2.0.3"
 python = "~3.13"
 slack-sdk = "^3.23.0"
+sqlparse = ">=0.5.0"
 typer = { extras = ["all"], version = "^0.15.0" }
 sqlalchemy = "^2.0.30"
 pydantic-settings = "^2.3.4"
@@ -53,6 +54,10 @@ python_version = "3.12"
 [[tool.mypy.overrides]]
 ignore_missing_imports = true
 module = ["plotly.*", "dynaconf.*", "newrelic.*"]
+
+[[tool.mypy.overrides]]
+module = "sqlparse"
+ignore_missing_imports = true
 
 [tool.pylint."MESSAGE CONTROL"]
 disable = [
