--- a/api/local.env
+++ b/api/local.env
@@ -162,3 +162,8 @@ CDN_URL=http://localhost:4566/local-mock-public-bucket
 GRANTS_GOV_URI=http://mock-applicants-soap-api:8080
 ENABLE_SOAP_API=1
 INJECT_UUID_SOAP_RESPONSE=1 # inject uuid and other response info to simulate live SOAP response.
+
+###############################
+# Domain verification content
+###############################
+DOMAIN_VERIFICATION_CONTENT='{"dv.txt": "data"}'
