--- a/fluentbit/Makefile
+++ b/fluentbit/Makefile
@@ -2,6 +2,7 @@
 release-build:
 	aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 533243300146.dkr.ecr.us-east-1.amazonaws.com
 	docker buildx build \
+		--target release \
 		--platform=linux/amd64 \
 		--build-arg RUN_USER=$(RUN_USER) \
 		--build-arg RUN_UID=$(RUN_UID) \
