--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -1,3 +1,7 @@
+[PLUGINS]
+    Path /fluent-bit/bin/out_newrelic.so
+    Path /fluent-bit/bin/out_cloudwatch.so
+
 [INPUT]
     Name forward
     Listen 0.0.0.0
