--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -9,11 +9,13 @@
 
 [OUTPUT]
     Name newrelic
+    Path /fluent-bit/bin/out_newrelic.so
     Match *
     licenseKey ${licenseKey}
 
 [OUTPUT]
-    Name cloudwatch_logs
+    Name cloudwatch
+    Path /fluent-bit/bin/out_cloudwatch.so
     Match *
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
