--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -4,12 +4,12 @@
     Port 24224
 
 [OUTPUT]
-    Name newrelic
+    Name nrlogs
     Match *
-    licenseKey ${licenseKey}
+    license_key ${licenseKey}
 
 [OUTPUT]
-    Name cloudwatch
+    Name cloudwatch_logs
     Match *
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
