--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -5,12 +5,12 @@
 
 [OUTPUT]
     Name nrlogs
-    Match *
+    Match **
     license_key ${licenseKey}
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match *
+    Match **
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
     region ${aws_region}
