--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -5,14 +5,15 @@
 
 [OUTPUT]
     Name nrlogs
-    Match **
+    Match forward
     license_key ${licenseKey}
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match **
+    Match forward
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
     region ${aws_region}
     auto_create_group true
     log_format json
+    enable_ecs_log_metadata true
