--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -2,18 +2,18 @@
     Name forward
     Listen 0.0.0.0
     Port 24224
+    Tag forward
 
 [OUTPUT]
     Name nrlogs
-    Match forward
+    Match **
     license_key ${licenseKey}
 
 [OUTPUT]
     Name cloudwatch_logs
-    Match forward
+    Match **
     log_group_name ${log_group_name}
     log_stream_name ${container_name}/${container_id}
     region ${aws_region}
     auto_create_group true
     log_format json
-    enable_ecs_log_metadata true
