--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -4,6 +4,11 @@
     Port 24224
     Tag forward
 
+[FILTER]
+    Name record_modifier
+    Match **
+    Record incoming_tag $TAG
+
 [OUTPUT]
     Name nrlogs
     Match **
@@ -17,3 +22,7 @@
     region ${aws_region}
     auto_create_group true
     log_format json
+
+[OUTPUT]
+    Name stdout
+    Match **
