--- a/fluentbit/fluentbit.conf
+++ b/fluentbit/fluentbit.conf
@@ -5,6 +5,11 @@
     Tag forward
 
 [FILTER]
+    Name modify
+    Match **
+    Add firelens "true"
+
+[FILTER]
     Name record_modifier
     Match **
     Record incoming_tag $TAG
